refactor Add OpenGraph Meta tags
Ajout des balise meta pour le referencement: OpenGraph, Facebook etc...

--- a/index.html
+++ b/index.html
@@ -4,6 +4,29 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Primary Meta Tags -->
+  <title>MétéoClic</title>
+  <meta name="title" content="MétéoClic">
+  <meta name="description"
+    content="Bienvenue sur MétéoClic, notre application météo minimaliste. Rechercher la météo de votre ville ou pays">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://enrick-web.github.io/MeteoClic/">
+  <meta property="og:title" content="MétéoClic">
+  <meta property="og:description"
+    content="Bienvenue sur MétéoClic, notre application météo minimaliste. Rechercher la météo de votre ville ou pays">
+  <meta property="og:image" content="/assets/Capture d’écran 2020-10-13 à 00.00.19.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://enrick-web.github.io/MeteoClic/">
+  <meta property="twitter:title" content="MétéoClic">
+  <meta property="twitter:description"
+    content="Bienvenue sur MétéoClic, notre application météo minimaliste. Rechercher la météo de votre ville ou pays">
+  <meta property="twitter:image" content="/assets/Capture d’écran 2020-10-13 à 00.00.19.png">
+  <!-- FIN META TAG -->
+
   <title>MétéoClic</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
