--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
   <meta property="og:title" content="MétéoClic">
   <meta property="og:description"
     content="Bienvenue sur MétéoClic, notre application météo minimaliste. Rechercher la météo de votre ville ou pays">
-  <meta property="og:image" content="assets/opengraphillustration.png">
+  <meta property="og:image"
+    content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -24,7 +25,8 @@
   <meta property="twitter:title" content="MétéoClic">
   <meta property="twitter:description"
     content="Bienvenue sur MétéoClic, notre application météo minimaliste. Rechercher la météo de votre ville ou pays">
-  <meta property="twitter:image" content="assets/opengraphillustration.png">
+  <meta property="twitter:image"
+    content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
   <!-- FIN META TAG -->
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" />
