--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     </div>
   </div>
   <footer class="container-fluid bg-dark navbar-dark">
-    <p>© 2020, WeatherClic</p>
+    <p>© 2020, MétéoClic</p>
   </footer>
 
   <script src="meteo.js"></script>
