--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:title" content="MétéoClic">
   <meta property="og:description"
     content="Bienvenue sur MétéoClic, notre application météo minimaliste. Rechercher la météo de votre ville ou pays">
-  <meta property="og:image" content="opengraphillustration.png">
+  <meta property="og:image" content="./opengraphillustration.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -24,7 +24,7 @@
   <meta property="twitter:title" content="MétéoClic">
   <meta property="twitter:description"
     content="Bienvenue sur MétéoClic, notre application météo minimaliste. Rechercher la météo de votre ville ou pays">
-  <meta property="twitter:image" content="opengraphillustration.png">
+  <meta property="twitter:image" content="./opengraphillustration.png">
   <!-- FIN META TAG -->
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" />
